[gd_scene load_steps=11 format=1]

[ext_resource path="res://Textures/Backgrounds/Kitchen.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Kitchen.gd" type="Script" id=2]
[ext_resource path="res://Textures/Sprites/meimei_happy.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Ubuntu.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Scripts/animessage4.gd" type="Script" id=5]
[ext_resource path="res://Scripts/kitchen_breakfast.gd" type="Script" id=6]
[ext_resource path="res://Scripts/kitchen_lunch.gd" type="Script" id=7]
[ext_resource path="res://Textures/Buttons/HintButton_default.png" type="Texture" id=8]
[ext_resource path="res://Textures/Buttons/HintButton_hover.png" type="Texture" id=9]
[ext_resource path="res://Scripts/note_kitchen.gd" type="Script" id=10]

[node name="Kitchen" type="TextureFrame"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 960.0
texture = ExtResource( 1 )
stretch_mode = 0
script/script = ExtResource( 2 )

[node name="mei_breakfast" type="Sprite" parent="."]

transform/pos = Vector2( 528, 142 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="mei_lunch" type="Sprite" parent="."]

transform/pos = Vector2( 528, 142 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="SingleDialog" type="Panel" parent="."]

editor/display_folded = true
visibility/opacity = 0.75
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 320.0
margin/right = 340.0
margin/bottom = 380.0

[node name="Message" type="RichTextLabel" parent="SingleDialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 21.0
margin/top = 11.0
margin/right = 280.0
margin/bottom = 31.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0
script/script = ExtResource( 5 )

[node name="Timer1" type="Timer" parent="SingleDialog"]

process_mode = 1
wait_time = 0.01
one_shot = false
autostart = true

[node name="Button" type="Button" parent="SingleDialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 234.0
margin/top = 33.0
margin/right = 290.0
margin/bottom = 53.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "I see..."
flat = false

[node name="Breakfast" type="Panel" parent="."]

visibility/opacity = 0.75
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 680.0
margin/top = 120.0
margin/right = 960.0
margin/bottom = 180.0
script/script = ExtResource( 6 )

[node name="Message" type="RichTextLabel" parent="Breakfast"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 7.0
margin/right = 270.0
margin/bottom = 67.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="Timer" type="Timer" parent="Breakfast"]

process_mode = 1
wait_time = 0.014
one_shot = false
autostart = true

[node name="Choices" type="Panel" parent="Breakfast"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 71.0
margin/right = 140.0
margin/bottom = 137.0

[node name="A" type="Button" parent="Breakfast/Choices"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 7.0
margin/right = 252.0
margin/bottom = 29.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="B" type="Button" parent="Breakfast/Choices"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 24.0
margin/right = 252.0
margin/bottom = 46.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="C" type="Button" parent="Breakfast/Choices"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 42.0
margin/right = 252.0
margin/bottom = 64.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Lunch" type="Panel" parent="."]

visibility/opacity = 0.75
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 680.0
margin/top = 120.0
margin/right = 960.0
margin/bottom = 200.0
script/script = ExtResource( 7 )

[node name="Message" type="RichTextLabel" parent="Lunch"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 270.0
margin/bottom = 50.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="Timer" type="Timer" parent="Lunch"]

process_mode = 1
wait_time = 0.01
one_shot = false
autostart = true

[node name="Choices" type="Panel" parent="Lunch"]

editor/display_folded = true
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 94.0
margin/right = 140.0
margin/bottom = 160.0

[node name="A" type="Button" parent="Lunch/Choices"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 7.0
margin/right = 252.0
margin/bottom = 29.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="B" type="Button" parent="Lunch/Choices"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 24.0
margin/right = 252.0
margin/bottom = 46.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="C" type="Button" parent="Lunch/Choices"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 42.0
margin/right = 252.0
margin/bottom = 64.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="HappinessLevel" type="Panel" parent="."]

editor/display_folded = true
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 840.0
margin/top = 24.0
margin/right = 1040.0
margin/bottom = 52.0

[node name="Label" type="RichTextLabel" parent="HappinessLevel"]

rect/scale = Vector2( 1.25, 1.25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 21.0
margin/top = 8.0
margin/right = 151.0
margin/bottom = 32.0
bbcode/enabled = true
bbcode/bbcode = "HAPPINESS LEVEL:"
visible_characters = -1
percent_visible = 1.0

[node name="Score" type="RichTextLabel" parent="HappinessLevel"]

rect/scale = Vector2( 1.25, 1.25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 171.0
margin/top = 8.0
margin/right = 201.0
margin/bottom = 40.0
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="Clues" type="TextureButton" parent="."]

editor/display_folded = true
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = 44.0
margin/right = 326.0
margin/bottom = 344.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/hover = ExtResource( 9 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Note" type="TextureFrame" parent="Clues"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 348.0
margin/top = 232.0
margin/right = 2098.0
margin/bottom = 1482.0
stretch_mode = 0
script/script = ExtResource( 10 )

[connection signal="timeout" from="SingleDialog/Timer1" to="SingleDialog/Message" method="_on_Timer1_timeout"]

[connection signal="pressed" from="SingleDialog/Button" to="SingleDialog/Message" method="_on_Button_pressed"]

[connection signal="timeout" from="Breakfast/Timer" to="Breakfast" method="_on_Timer_timeout"]

[connection signal="pressed" from="Breakfast/Choices/A" to="Breakfast" method="_on_A_pressed"]

[connection signal="pressed" from="Breakfast/Choices/B" to="Breakfast" method="_on_B_pressed"]

[connection signal="pressed" from="Breakfast/Choices/C" to="Breakfast" method="_on_C_pressed"]

[connection signal="timeout" from="Lunch/Timer" to="Lunch" method="_on_Timer_timeout"]

[connection signal="pressed" from="Lunch/Choices/A" to="Lunch" method="_on_A_pressed"]

[connection signal="pressed" from="Lunch/Choices/B" to="Lunch" method="_on_B_pressed"]

[connection signal="pressed" from="Lunch/Choices/C" to="Lunch" method="_on_C_pressed"]

[connection signal="mouse_enter" from="Clues" to="Clues/Note" method="_on_Clues_mouse_enter"]

[connection signal="mouse_exit" from="Clues" to="Clues/Note" method="_on_Clues_mouse_exit"]


